# cargo-patch-crate-example

./: Cargo.toml  README.md  build.rs
patches/: rustix+0.38.21.patch
src/: main.rs
